--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@babel/core": "7.x.x",
         "@babel/preset-env": "7.x.x",
         "@babel/preset-react": "7.x.x",
+        "@babel/plugin-proposal-class-properties": "7.x.x",
         "prettier": "2.x.x"
     }
 }
