--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "name": "plain_text_backups",
     "main": "./lib/index",
-    "version": "0.4.6",
+    "version": "0.4.7",
     "description": "Plain text backups and import for Inkdrop.",
     "keywords": [],
     "repository": "https://github.com/ryanpcmcquen/inkdrop_plain_text_backups.git",
     "license": "MPL-2.0",
     "styleSheets": [],
     "scripts": {
-        "build": "babel src/ -d lib/",
+        "build": "babel src/ -s -d lib/",
         "dev": "babel src/ -s -d lib/ --watch"
     },
     "engines": {
