--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "plain_text_backups",
     "main": "./lib/index",
-    "version": "0.8.0",
+    "version": "v0.8.1",
     "description": "Plain text backups and import for Inkdrop.",
     "keywords": [],
     "repository": "https://github.com/ryanpcmcquen/inkdrop_plain_text_backups.git",
